log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Fri 31 Mar 2023 11:25:37 AM UTC: 
 tests:  0|6
total_score: 0/70
67b50e4
Fri 31 Mar 2023 11:34:57 AM UTC: 
 arraylist.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:18:17: error: expected ‘;’ before ‘return’
   18 |   vector->size=0
      |                 ^
      |                 ;
   19 |     return vector;
      |     ~~~~~~       
arraylist.c:20:1: error: control reaches end of non-void function [-Werror=return-type]
   20 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
80946d9
Fri 31 Mar 2023 11:35:03 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
9101ce7
